# robogen

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.wip  Example_finalBestInd_GP.txt  README.md  arch  docker-compose.yaml  docker.sh  getParametricValues_LINUX.bat  getParametricValues_LINUX.bat~  getParametricValues_WINDOWS.bat  macDylib.sh  publishToDocker.sh  sim.sh
src/: .cproject  .gitignore  .project  BrainEvolver.cpp  CMakeLists.txt  Evolver.cpp  Exposable.h  JsTest.cpp  Models.h  PartList.cpp  PartList.h  RenderModels.h  Robogen.cpp  Robogen.h  RobogenServer.cpp  RobogenServerSIO.cpp  Robot.cpp  Robot.h  Simulator.cpp  Simulator.h  emscripten_test.cpp  evolutionTest.cpp  robogen.pb.cc  robogen.pb.h  robogen.proto  robogen_js.cpp  server.cpp  src.kdev4  test.cpp  testjs.cpp
src/.kdev4/: src.kdev4
src/arduino/: ArduinoNNCompiler.cpp  ArduinoNNCompiler.h  ArduinoNNConfiguration.h
src/brain/: NeuralNetwork.c  NeuralNetwork.h
src/cmake/: CustomPath.cmake  FindSocketIoClient.cmake  OptimizeForArchitecture.cmake
src/config/: ConfigurationReader.cpp  ConfigurationReader.h  EvolverConfiguration.cpp  EvolverConfiguration.h  LightSourcesConfig.h  ObstaclesConfig.h  RobogenConfig.h  StartPosition.cpp  StartPosition.h  StartPositionConfig.h  TerrainConfig.h
src/evolution/: BrainEvolver.cpp  NeuralNetworkRepresentation.cpp  NeuralNetworkRepresentation.h  NeuronRepresentation.cpp  PartRepresentation.cpp  PartRepresentation.h  RobotRepresentation.cpp  RobotRepresentation.h
src/evolution/engine/: BodyVerifier.cpp  BodyVerifier.h  DirectMutator.cpp  DirectMutator.h  EvolverConfiguration.cpp  EvolverConfiguration.h  EvolverLog.cpp  EvolverLog.h  IndirectMutator.cpp  IndirectMutator.h  Individual.cpp  Individual.h  IndividualContainer.cpp  IndividualContainer.h  Mutator.cpp  Mutator.h  Population.cpp  Population.h  Replacer.cpp  Replacer.h  Selector.cpp  Selector.h
src/evolution/neat/: Genes.h  Genome.cpp  Genome.h  Main.cpp  NeuralNetwork.cpp  NeuralNetwork.h  Parameters.cpp  PhenotypeBehavior.cpp  PhenotypeBehavior.h  Population.cpp  Population.h  PythonBindings.h  Species.cpp  Species.h  Substrate.cpp  Substrate.h
src/evolution/parts/: ActiveCardanRepresentation.cpp  ActiveCardanRepresentation.h  ActiveHingeRepresentation.cpp  ActiveHingeRepresentation.h  ActiveWheelRepresentation.cpp  ActiveWheelRepresentation.h  ActiveWhegRepresentation.cpp  ActiveWhegRepresentation.h  CoreComponentRepresentation.cpp  CoreComponentRepresentation.h  FixedBrickRepresentation.cpp  FixedBrickRepresentation.h  LightSensorRepresentation.cpp  LightSensorRepresentation.h  ParametricBarJointRepresentation.cpp  ParametricBarJointRepresentation.h  PassiveCardanRepresentation.cpp  PassiveCardanRepresentation.h  PassiveHingeRepresentation.cpp  PassiveHingeRepresentation.h  PassiveWheelRepresentation.cpp  PassiveWheelRepresentation.h  RotatorRepresentation.cpp  RotatorRepresentation.h  TouchSensorRepresentation.cpp  TouchSensorRepresentation.h
src/evolution/representation/: FakeRobotRepresentation.h  Grammar.cpp  Grammar.h  NeuralNetworkRepresentation.cpp  NeuralNetworkRepresentation.h  NeuronRepresentation.cpp  NeuronRepresentation.h  ParseHelpers.cpp  ParseHelpers.h  PartRepresentation.cpp  PartRepresentation.h  RobotRepresentation.cpp  RobotRepresentation.h  SubRobotRepresentation.cpp  SubRobotRepresentation.h
src/exposable/: Exposable.h  ExposableModel.h
src/js/: EmscriptenTest.cpp  RobogenJS.cpp
src/model/: AbstractBody.cpp  AbstractBody.h  ActuatedComponent.h  CompositeBody.cpp  CompositeBody.h  Connection.cpp  Connection.h  ConvexBody.cpp  ConvexBody.h  Joint.cpp  Joint.h  Model.cpp  Model.h  PerceptiveComponent.h  PhysicalBody.cpp  PhysicalBody.h  PositionObservable.h  SimpleBody.cpp  SimpleBody.h
src/model/components/: CardanModel.cpp  CardanModel.h  HingeModel.cpp  HingeModel.h  ParametricBrickModel.cpp  ParametricBrickModel.h  ParametricPrismModel.cpp  ParametricPrismModel.h  PassiveWheelModel.cpp  PassiveWheelModel.h
src/model/motors/: Motor.cpp  Motor.h  RotationMotor.cpp  RotationMotor.h  ServoMotor.cpp  ServoMotor.h
src/model/objects/: BoxObstacle.cpp  BoxObstacle.h  LightSource.cpp  LightSource.h  Obstacle.h
src/model/sensors/: ImuSensor.cpp  ImuSensor.h  IrSensor.cpp  IrSensor.h  LightSensor.cpp  LightSensor.h  Sensor.h  SensorGroup.h  SimpleSensor.h  TouchSensor.cpp  TouchSensor.h
src/printing/: BodyCompiler.cpp  BodyCompiler.h
src/render/: Mesh.cpp  Mesh.h  RenderModel.cpp  RenderModel.h  RenderableJoint.h
src/render/callback/: ActiveCardanCrossCallback.cpp  ActiveCardanCrossCallback.h  BodyCallback.cpp  BodyCallback.h  CardanCrossCallback.cpp  CardanCrossCallback.h  PositionObservableCallback.cpp  PositionObservableCallback.h
src/render/components/: ActiveCardanRenderModel.cpp  ActiveCardanRenderModel.h  ActiveHingeRenderModel.cpp  ActiveHingeRenderModel.h  ActiveWheelRenderModel.cpp  ActiveWheelRenderModel.h  ActiveWhegRenderModel.cpp  ActiveWhegRenderModel.h  CardanRenderModel.cpp  CardanRenderModel.h  CoreComponentRenderModel.cpp  CoreComponentRenderModel.h  HingeRenderModel.cpp  HingeRenderModel.h  IrSensorRenderModel.cpp  IrSensorRenderModel.h  LightSensorRenderModel.cpp  LightSensorRenderModel.h  ParametricBrickRenderModel.cpp  (+9 more)
src/scenario/: ChasingScenario.cpp  ChasingScenario.h  Environment.cpp  Environment.h  JSScenario.cpp  JSScenario.h  QScriptScenario.cpp  QScriptScenario.h  RacingScenario.cpp  RacingScenario.h  Scenario.cpp  Scenario.h  ScenarioFactory.cpp  ScenarioFactory.h  Terrain.cpp  Terrain.h
src/scripting/: QBindings.cpp  QBindings.h
src/test/: NeatTest.cpp  ServerViewerTest.cpp  TestComponentModel.cpp  test.cpp
src/utils/: JSUtils.cpp  JSUtils.h  ParsingUtils.h  QScriptUtils.cpp  QScriptUtils.h  RobogenCollision.cpp  RobogenCollision.h  RobogenUtils.cpp  RobogenUtils.h
src/viewer/: FileViewer.cpp  FileViewerLog.cpp  FileViewerLog.h  IViewer.h  JSViewer.cpp  JSViewer.h  KeyboardHandler.h  NullFileViewer.cpp  NullViewer.cpp  NullViewer.h  ServerViewer.cpp  Viewer.cpp  Viewer.h  WebGLLogger.cpp  WebGLLogger.h
(+254 files in other folders)
